--- a/importOrder.yaml
+++ b/importOrder.yaml
@@ -14,8 +14,8 @@ build:
   buildOs: Ubuntu 14.04
   runtimeVersion: php 5.6
   buildTool: NA
-  preBuild: apt-get install -y unzip
-  buildCommand: cd mini && bash ./_vagrant/bootstrap.sh
+  preBuild: apt-get install -y zip unzip
+  buildCommand: bash ./_vagrant/bootstrap.sh
 buildenvVars:
 test:
   utFramework: PHPUnit
@@ -23,7 +23,7 @@ test:
   testCommand: echo skip
 package:
   packageTool: composer
-  packageCommand: mkdir target && cd .. && zip -r artifact.zip mini/ && mv artifact.zip mini/target && rm -rf artifact.zip
+  packageCommand: mkdir -p target && cd .. && zip -r artifact.zip mini/ && mv artifact.zip mini/target && rm -rf artifact.zip
   artifactDir: ./target
   artifactUploadCommand: 
 deployDeps:
