--- a/importOrder.yaml
+++ b/importOrder.yaml
@@ -23,7 +23,7 @@ test:
   testCommand: echo skip
 package:
   packageTool: composer
-  packageCommand: mkdir -p target && cd .. && zip -r artifact.zip mini/ && mv artifact.zip mini/target && rm -rf artifact.zip
+  packageCommand: mkdir -p target && zip -r target/artifact.zip *
   artifactDir: ./target
   artifactUploadCommand: 
 deployDeps:
@@ -41,6 +41,6 @@ run:
   dockerized: False
   runtimeOs: Ubuntu 14.04
   runtimeEnv: php 5.6
-  installScript: sudo apt-get install -y unzip && unzip artifact.zip && rm -rf artifact.zip && cd mini && composer install && bash ./_vagrant/bootstrap.sh
+  installScript: apt-get install -y unzip && unzip artifact.zip && rm -rf artifact.zip && composer install && bash ./_vagrant/bootstrap.sh
   runCommand: echo 1
   userName: root
