--- a/mini-ia-v3.yaml
+++ b/mini-ia-v3.yaml
@@ -45,7 +45,7 @@ buildAndDistribute:
   requiresIntegrationTests: '#TODO'
 deployment:
   dependentServices: '#TODO'
-  serviceName: '#TODO'
+  serviceName: 'mini-service'
   overridableProps:
     guiType: '#TODO'
     envVars:
