--- a/mini-ia-v3-stateful.yaml
+++ b/mini-ia-v3-stateful.yaml
@@ -94,6 +94,7 @@ deployment:
       - name: www
         mountPath: /www
         size: 25
+      - name: www2
     provision:
       os: '#TODO'
       prepareEnvCommand: '#TODO'
