--- a/northplains-vmware-demo-mini.cicd-meta.yaml
+++ b/northplains-vmware-demo-mini.cicd-meta.yaml
@@ -12,7 +12,7 @@ needsDockerServer: false
 type: Deployable service
 buildAndDistribute:
     techStack: PHP
-    os: Centos 7
+    os: Ubuntu 18.04
     toolchainVersion: php-7.2
     runtimeVersion: php-7.2
     build:
@@ -44,7 +44,7 @@ deployment:
             command: echo skip
         install:
             dockerized: false
-            os: Centos 7
+            os: Ubuntu 18.04
             runtimeEnv: php-7.2
             installCommand: cp ./target/artifact.zip artifact.zip || true && apt-get
                 install -y unzip && unzip -o artifact.zip && rm -rf artifact.zip &&
